- [Feature] Dialog for duplicated files lists all at once instead of consecutively asking
- [Feature] Filter field is now a standard search field
- [Feature] Read bookmarks from "/Library/Application Support/Cyberduck/"
 instead of the individual user bookmarks file if available
- [Feature] Check for running transfers on application quit
- [Feature] Updated FTP core (FTP)
- [Bugfix] Update existing browsers when changing the default interface attributes in the Preferences
- [Bugfix] Don't cache DNS lookups forever
- [Bugfix] Bookmark drawer icon has no text-only equivalent
- [Bugfix] Tabbing between browser and filter box
- [Bugfix] Quick Connect Field has initial focus

2.3.3
- [Bugfix] Correctly parsing symbolic links

2.3.2
- [Localize] Slovak Localization
- [Localize] Czech Localization
- [Feature] Support for EPFL file listings to support servers running "publicfile" (FTP)
- [Bugfix] Improved PASV response parsing (FTP)
- [Feature] Supporting SOCKS proxies (not tested)
- [Feature] Change file permissions on multiple files
- [Feature] Copy the URL of a remote site
- [Bugfix] Use date formatting rules set in the System Preferences
- [Feature] Preference item to set the action when double-clicking files (Download or edit)
- [Bugfix] Remembering the position of the browser window
- [Bugfix] Compatibility with servers not supporting the SIZE command (FTP)

2.3.1
- [Localize] Chinese (Simplified) Localization
- [Feature] Rendezvous services in Bookmark menu
- [Bugfix] Upper level directories had to be listed first when uploading files
- [Bugfix] Changes to bookmarks won't be saved
- [Feature] Preference item to disable the update check
- [Feature] Toolbar item to open downloaded files with default application
- [Feature] Graceful application termination (Properly ask to close all connections and then quit)
- [Bugfix] Remembering choosen directories in open and save dialogs

2.3
- [Localize] Finnish Localization