@@ -125,7 +125,6 @@ public class FTPSession extends Session {
 			try {
 				this.log("Authenticating as "+host.getCredentials().getUsername()+"...", Message.PROGRESS);
 				this.FTP.login(credentials.getUsername(), credentials.getPassword());
-//				credentials.addPasswordToKeychain();
 				credentials.addInternetPasswordToKeychain();
 				this.log("Login successful", Message.PROGRESS);
 			}
